# GitHub

./: Lets_Get_It_Dude.py  README.md  index.html  instacart-project.html  megaline-project.html  pyproject.toml  requirements.txt
commodity-futures-site/: README.md  app.js  index.html  styles.css
