[project]
name = "lets_get_it_dude"
version = "0.1.0"
description = "A Python project scaffold for my portfolio workspace."
authors = ["<Your Name> <you@example.com>"]
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
